# printerfacts

./: .drone.yml  CHANGELOG.md  Cargo.toml  default.nix  docker.nix  flake.nix  printerfacts.dhall  shell.nix
.rpm/: printerfacts.default  printerfacts.service  printerfacts.spec
doc/: portable-svc.md
nix/: dhall.nix  sources.json
scripts/: release.sh
src/: main.rs
systemd/: printerfacts.service.in
templates/: footer.hbs  footer.rs.html  header.rs.html  index.rs.html
templates/error/: 404.hbs
