[package]
name = "printerfacts"
version = "0.3.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"
build = "build.rs"
description = "Printer facts: The API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hyper = "0.14"
lazy_static = "1.4"
mime = "0.3.0"
pfacts = "0.1.0"
prometheus = { version = "0.9", default-features = false, features = ["process"] }
rand = "0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.5", features = ["net"] }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = "0.3"

[build-dependencies]
ructe = { version = "0", features = ["warp03"] }

[package.metadata.rpm]
package = "printerfacts"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
printerfacts = { path = "/usr/bin/printerfacts" }

[package.metadata.rpm.files]
"./.rpm/printerfacts.default" = { path = "/etc/default/printerfacts", mode = "644" }
"./.rpm/printerfacts.service" = { path = "/lib/systemd/system/printerfacts.service" }
